fixed some layout issue in mobile device

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding-top: 4rem;
   min-width: 480px;
-}
+} */
