--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer components {
+  #__next {
+    @apply w-full h-full;
+  }
+  html,
+  body {
+    @apply h-full;
+  }
+}
